--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
         <h2>Meet our Deans</h2>
 
         <div class="dean_cards">
+          
           <div class="card fade-in">
+            <a href="/proffessor/index.html">
             <img
               src="https://miro.medium.com/v2/resize:fit:1400/0*kOxtr_2CJzI1K9r6.jpg"
               alt="dean1"
@@ -61,6 +63,8 @@
               >
                 <i class="fab fa-researchgate"></i>
               </a>
+            </a>
+          </a>
             </div>
           </div>
           <div class="card fade-in">
